--- a/app/src/main/res/layout/fragment_animal_medida.xml
+++ b/app/src/main/res/layout/fragment_animal_medida.xml
@@ -47,7 +47,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="1"
+            android:weightSum="9"
             android:padding="5dp"
             android:orientation="horizontal">
 
@@ -58,10 +58,10 @@
                 android:textSize="30dp"/>
 
             <ImageView
-                android:layout_weight=".1"
-                android:layout_width="200dp"
-                android:layout_height="50dp"
-                android:background="@drawable/lapiz"
+                android:layout_weight=".3"
+                android:layout_width="80dp"
+                android:layout_height="100dp"
+                android:background="@drawable/caballo"
                 />
         </LinearLayout>
 
@@ -79,10 +79,10 @@
                 android:textSize="30dp"/>
 
             <ImageView
-                android:layout_weight=".4"
-                android:layout_width="200dp"
-                android:layout_height="50dp"
-                android:background="@drawable/lapiz"
+                android:layout_weight=".3"
+                android:layout_width="80dp"
+                android:layout_height="100dp"
+                android:background="@drawable/perro"
                 />
         </LinearLayout>
 
@@ -100,10 +100,10 @@
                 android:textSize="30dp"/>
 
             <ImageView
-                android:layout_weight=".9"
-                android:layout_width="200dp"
-                android:layout_height="50dp"
-                android:background="@drawable/lapiz"
+                android:layout_weight=".3"
+                android:layout_width="80dp"
+                android:layout_height="100dp"
+                android:background="@drawable/burro"
                 />
         </LinearLayout>
 
