--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,13 +10,6 @@
         <item
             android:id="@+id/nav_gallery"
             android:title="@string/menu_gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:title="Sumar" />
-
-        <item
-            android:id="@+id/nav_resta"
-            android:title="Resta" />
 
         <item
             android:id="@+id/nav_contar_color"
@@ -29,6 +22,20 @@
         <item
             android:id="@+id/LongitudLapizFragment"
             android:title="Logitud lápiz" />
+
+        <item
+            android:id="@+id/nav_animales"
+            android:title="Medida animal" />
+
+
+        <item
+            android:id="@+id/nav_slideshow"
+            android:title="Sumar" />
+
+        <item
+            android:id="@+id/nav_resta"
+            android:title="Resta" />
+
     </group>
 
 
