--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -29,6 +29,10 @@
 
 
         <item
+            android:id="@+id/nav_estimacion"
+            android:title="Estimación" />
+
+        <item
             android:id="@+id/nav_slideshow"
             android:title="Sumar" />
 
