--- a/app/src/main/res/layout/activity_access_relato.xml
+++ b/app/src/main/res/layout/activity_access_relato.xml
@@ -143,6 +143,7 @@
                     android:id="@+id/login_button"
                     android:layout_width="match_parent"
                     android:layout_gravity="center_horizontal"
+                    android:visibility="gone"
                     facebook:com_facebook_login_text="Continuar con facebook"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="20dp"
