--- a/app/src/main/res/layout/fragment_estimacion.xml
+++ b/app/src/main/res/layout/fragment_estimacion.xml
@@ -56,7 +56,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:weightSum="6"
                 android:layout_marginTop="35dp"
                 android:layout_gravity="center"
