menú paleta y funcionalidad

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,6 +33,10 @@
             android:title="Estimación" />
 
         <item
+            android:id="@+id/nav_paleta"
+            android:title="Medida Paleta" />
+
+        <item
             android:id="@+id/nav_slideshow"
             android:title="Sumar" />
 
