--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -37,6 +37,10 @@
             android:title="Medida Paleta" />
 
         <item
+            android:id="@+id/nav_peso"
+            android:title="Peso" />
+
+        <item
             android:id="@+id/nav_slideshow"
             android:title="Sumar" />
 
